add microsoft login

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="flex flex-col items-center gap-2 [&>a]:underline">
         <a href="fb.html">Facebook</a>
         <a href="figma.html">Figma</a>
+        <a href="microsoft.html">Microsoft</a>
       </div>
     </main>
   </body>
